File browser system folders doesn't change with interface language. #80679

Closed
opened 2020-09-11 05:07:36 +02:00 by Richard Antalik · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14736 Core Profile Context 20.8.3 27.20.12027.1001

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 21:55, hash: 66078594d1
Worked: (newest version of Blender that worked as expected)

Short description of error
File browser system folders doesn't change with interface language

Exact steps for others to reproduce the error
Be sure to remember visually where language menu is :)

  • In preferences change language to Simplified Chinese (I haven't tried others)
  • Close Blender (with autosave preferences)
  • Open Blender
  • In preferences change language to English

Open file browser (save file)

System folders are in chinese until next Blender restart.
If system folder is in Recent folders, it has chinese name forever.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14736 Core Profile Context 20.8.3 27.20.12027.1001 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 21:55, hash: `66078594d1` Worked: (newest version of Blender that worked as expected) **Short description of error** File browser system folders doesn't change with interface language **Exact steps for others to reproduce the error** Be sure to remember visually where language menu is :) - In preferences change language to Simplified Chinese (I haven't tried others) - Close Blender (with autosave preferences) - Open Blender - In preferences change language to English # Open file browser (save file) System folders are in chinese until next Blender restart. If system folder is in Recent folders, it has chinese name forever.
Author
Member

Added subscriber: @iss

Added subscriber: @iss
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

I guess I will confirm this for myself

I guess I will confirm this for myself
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

I'm not sure if I am following the instructions correctly, but...

I start Blender in English. I select File/Open and I see a display like this:

SystemEnglish.png

I go straight into Preferences (without restarting Blender) and change my language to Chinese. I then select File / Open and see this:

SystemChinese.png

This seems right. And I get the same result if I close and restart the program at any point. Am I missing a step or not understanding the complaint?

I'm not sure if I am following the instructions correctly, but... I start Blender in English. I select File/Open and I see a display like this: ![SystemEnglish.png](https://archive.blender.org/developer/F9029332/SystemEnglish.png) I go straight into Preferences (without restarting Blender) and change my language to Chinese. I then select File / Open and see this: ![SystemChinese.png](https://archive.blender.org/developer/F9029335/SystemChinese.png) This seems right. And I get the same result if I close and restart the program at any point. Am I missing a step or not understanding the complaint?
Member

Okay, I have seen it screw up, but in fairly narrow circumstance...

Working: Within a single blender session, so not restarting at any time, I can switch between English and Chinese and back again any number of times, and each time will see the correct System List.

Working: I am in Chinese and then change language to English, THEN file/open I will see the System list correctly. Then close blender and restart and I still see the correct System List names

Working: I am in English and then change language to Chinese, but then immediately close blender. When I open it again the System List is properly in Chinese.

Broken: I am in Chinese and then change language to English, but then immediately close blender. When I open it again the System List is Chinese until I restart.

Okay, I have seen it screw up, but in fairly narrow circumstance... Working: Within a single blender session, so not restarting at any time, I can switch between English and Chinese and back again any number of times, and each time will see the correct System List. Working: I am in Chinese and then change language to English, THEN file/open I will see the System list correctly. Then close blender and restart and I still see the correct System List names Working: I am in English and then change language to Chinese, but then immediately close blender. When I open it again the System List is properly in Chinese. **Broken**: I am in Chinese and then change language to English, but then immediately close blender. When I open it again the System List is Chinese until I restart.
Member

And while debugging I have been unable to see the issue - it works correctly every time.

And while **debugging** I have been unable to see the issue - it works correctly every time.
Author
Member

I checked this in debug build, and I was able to reproduce.

I checked this in debug build, and I was able to reproduce.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

You should not be calling IFACE_("Pictures") in fsmenu_read_system this will cause the msgid to be translated, and when you switch languages it will use the translated text as msgid, come up empty and stick with the previous translation.

      fsmenu_add_windows_folder(fsmenu,
                                FS_CATEGORY_SYSTEM_BOOKMARKS,
                                &FOLDERID_Pictures,
                                "Pictures",
                                ICON_FILE_IMAGE,
                                FS_INSERT_LAST);

makes it work for me.

You should not be calling `IFACE_("Pictures")` in `fsmenu_read_system` this will cause the msgid to be translated, and when you switch languages it will use the translated text as msgid, come up empty and stick with the previous translation. ``` fsmenu_add_windows_folder(fsmenu, FS_CATEGORY_SYSTEM_BOOKMARKS, &FOLDERID_Pictures, "Pictures", ICON_FILE_IMAGE, FS_INSERT_LAST); ``` makes it work for me.
Harley Acheson self-assigned this 2020-10-22 17:54:20 +02:00
Member

I can fix it. @LazyDodo figured it out. My own mistake with that area.

I can fix it. @LazyDodo figured it out. My own mistake with that area.

This issue was referenced by f32ab724eb

This issue was referenced by f32ab724eb091d125aef2c8c9bc1394bd1ef05d5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80679
No description provided.